# research-stateful-auth-archaeology

./: .gitignore  README.md  allow-secrets-occore-prod-firebase.json  allow-secretsmanager-occore-prod.json  auth_contract_test.sh  cookie.txt  cookies.txt  docker-compose.yml  ecsTaskExecutionRole-trust.json  taskdef-occore-api-arm64.json  taskdef-occore-api-x86.json  taskdef-occore-api.json  taskdef-occore-migrate-arm64.json  taskdef-occore-migrate.json  taskdef-occore-prod-api-rev10.json  taskdef-occore-prod-api-rev11.json  taskdef-occore-prod-api-rev12.json  taskdef-occore-prod-api-rev13.json  taskdef-occore-prod-api-rev14.json  taskdef-occore-prod-api-rev16.json  taskdef-occore-prod-api-rev4.json  taskdef-occore-prod-api-rev5.json  taskdef-occore-prod-api-rev6.json  taskdef-occore-prod-api-rev7.json  taskdef-occore-prod-api-rev8.json  taskdef-occore-prod-api-rev9.json
python_batch/atlaskernel/: Dockerfile  alembic.ini  main.py  pyproject.toml  sample.jsonl  server.py
python_batch/atlaskernel/alembic/: env.py
python_batch/atlaskernel/alembic/versions/: 408801ce33d5_add_knowledge_entities_and_verifications.py  6cc385ed422c_create_review_tables.py
python_batch/atlaskernel/schema/: entity_analysis.v1.json
python_batch/atlaskernel/src/: server.py
python_batch/atlaskernel/src/atlaskernel/: cli.py  server.py
python_batch/atlaskernel/src/atlaskernel.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
python_batch/atlaskernel/src/atlaskernel/adapters/: assets_loader.py  (+4 more)
python_batch/atlaskernel/var/log/: atlaskernel_audit.jsonl
(+1792 files in other folders)
